# CG

./: .gitignore  LICENSE  README.md
flor-de-abril/: Flor.cpp  run.sh
ice-hockey-rink/: bresenham_circle.cpp  bresenham_circle.h  bresenham_line.cpp  bresenham_line.h  circle_equation.cpp  circle_equation.h  glwidget.cpp  glwidget.h  ice-hockey-rink  ice-hockey-rink-macos.pro  ice-hockey-rink.pro  includes.h  line_equation.cpp  line_equation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
project-1/: .gitignore  CMakeLists.txt  project_1  project_1.cbp
project-1/src/: bresenham.cpp  bresenham.h  includes.h  line_equation.cpp  line_equation.h  main.cpp  utils.cpp  utils.h
project-1/src/bresenham/: bresenham_circle.cpp  bresenham_circle.h  bresenham_line.cpp  bresenham_line.h
project-1/src/draw/: ice_hockey_rink.cpp  ice_hockey_rink.h
project-1/src/equations/: circle_equation.cpp  circle_equation.h  line_equation.cpp  line_equation.h
project-1/src/utils/: utils.cpp  utils.h
translate-example/: RetanguloAzulVermelho.cpp  run.sh
